--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+.avatar_edit{
+    width: 80px;
+    margin-bottom: 10px;
+}
